# ddns-ipv6

./: .dockerignore  .env.example  AGENTS.md  CONCEPTS.md  Cargo.toml  Dockerfile  PLAN.md  README.md  README.zh-CN.md  config.sample.toml  docker-compose.yml  flake.nix
.github/workflows/: docker-build.yml
contrib/: ddns-ipv6.service
docs/solutions/architecture-patterns/: rust-ipv6-ddns-trait-based-daemon.md
src/: config.rs  docker.rs  error.rs  lib.rs  main.rs  prefix.rs  updater.rs  util.rs
src/prefix/: dns.rs  netlink.rs  ra.rs
src/updater/: cloudflare.rs  rfc2136.rs
tests/: integration.rs
