[package]
name = "ddns-ipv6"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ddns-ipv6"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
hickory-resolver = "0.26"
dns-update = "0.5"
nlink = "0.21"
socket2 = "0.6"
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
libc = "0.2"
async-trait = "0.1"
